feat: add the implementation for the friend message