@@ -1,10 +1,9 @@
 package com.group2.Tiger_Talks.backend.service._implementation.Friend;
 
 import com.group2.Tiger_Talks.backend.model.Friend.Friendship;
-import com.group2.Tiger_Talks.backend.model.Friend.FriendshipDTO;
 import com.group2.Tiger_Talks.backend.model.Notification.Notification;
 import com.group2.Tiger_Talks.backend.model.User.UserProfile;
-import com.group2.Tiger_Talks.backend.model.User.UserProfileDTOFriendship;
+import com.group2.Tiger_Talks.backend.model.Friend.UserProfileDTOFriendship;
 import com.group2.Tiger_Talks.backend.repository.Friend.FriendshipRepository;
 import com.group2.Tiger_Talks.backend.repository.User.UserProfileRepository;
 import com.group2.Tiger_Talks.backend.service.Friend.FriendshipService;
@@ -14,7 +13,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class FriendshipServiceImpl implements FriendshipService {
@@ -38,18 +36,9 @@ public class FriendshipServiceImpl implements FriendshipService {
                     UserProfile friend = user.equals(friendship.getSender())
                             ? friendship.getReceiver()
                             : friendship.getSender();
-                    return new UserProfileDTOFriendship(friend);
+                    return new UserProfileDTOFriendship(friend, friendship);
                 })
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<FriendshipDTO> getAllFriends(String email) {
-        UserProfile user = userProfileRepository.findUserProfileByEmail(email)
-                .orElseThrow(() -> new IllegalStateException("User not found"));
-        return friendshipRepository.findBySenderOrReceiver(user, user).stream()
-                .map(Friendship::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
